k8-spec/dev-rchain-tk/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rchain-coop
  namespace: rchain-coop
  labels:
    app: rchain-coop
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: rchain-coop
