k8-spec/dev-rchain-tk/templates/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rchain-coop
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: rchain-coop
spec:
  tls:
    - secretName: letsencrypt-staging-tls
      hosts:
      - rchain-coop.tk
      - www.rchain-coop.tk
  rules:
  - host: rchain-coop.tk
    http:
      paths: 
        - path: 
          backend:
            serviceName: rchain-coop
            servicePort: 3000
